fix monospace fonts on mobile remove fingers from chord charts as they were confusing and in places incorrect add Change Log to new song template

--- a/css/ukeGeeks.music.css
+++ b/css/ukeGeeks.music.css
@@ -151,7 +151,7 @@
 .ugs-song-wrap .ugsTabs {
 	margin:0.6em;
 	padding:0;
-        font-family: "monospace";
+        font-family: Monaco, "Consolas", "Lucida Console", "Courier New", courier, monospace
         font-size: 12pt;
         page-break-inside : avoid;
 }
